# quotify

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  LICENSE  README.md  build.rs  config.example.toml
.cargo/: config.toml
.github/workflows/: ci.yml
.zed/: settings.json
assets/icons/: README.md
assets/provider-icons/: README.md
resources/: app.rc
scripts/: get_cdp_cookies.ps1  get_cdp_cookies.py  open_debug_chrome.bat  open_debug_chrome.ps1
src/: app.rs  config.rs  cookies.rs  diagnostics.rs  icon.rs  main.rs  secrets.rs  single_instance.rs  startup.rs  tray.rs  ui_model.rs  usage_history.rs  version.rs  webview_login.rs  winui_app.rs
src/provider/: abacus.rs  alibabatoken.rs  amp.rs  antigravity.rs  augment.rs  azureopenai.rs  bedrock.rs  claude.rs  codebuff.rs  codex.rs  copilot.rs  crof.rs  cursor.rs  deepgram.rs  deepseek.rs  doubao.rs  droid.rs  elevenlabs.rs  gemini.rs  grok.rs  groqcloud.rs  jetbrains.rs  kilo.rs  kimi.rs  kiro.rs  llmproxy.rs  mimo.rs  minimax.rs  mistral.rs  mod.rs  moonshot.rs  ollama.rs  openai.rs  opencode.rs  openrouter.rs  stepfun.rs  synthetic.rs  t3chat.rs  venice.rs  vertexai.rs  (+3 more)
