[package]
name = "quotify"
version = "0.1.0"
edition = "2024"
description = "Windows system tray AI provider quota monitor"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
dirs = "6"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
base64 = "0.22"
windows = { version = "0.62", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_System_LibraryLoader",
] }
sha2 = "0.11"
regex = "1"
cookie-scoop = "0.1"
eframe = { version = "0.34", features = ["glow"] }
egui = "0.34"
egui_extras = { version = "0.34", features = ["svg"] }
winit = { version = "0.30", default-features = false }
image = { version = "0.25", features = ["png"] }
parking_lot = "0.12"
raw-window-handle = "0.6"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
