[package]
name = "quotify"
version = "0.2.0"
edition = "2024"
description = "Windows system tray AI provider quota monitor"
license = "MIT"

[dependencies]
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "time",
    "macros",
] }
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
    "socks",
    "form",
    "query",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
dirs = "6"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
] }
windows-core = "0.62"
sha2 = "0.11"
regex = "1"
eframe = { version = "0.34", default-features = false, features = [
    "glow",
    "accesskit",
    "default_fonts",
] }
egui = "0.34"
egui_extras = { version = "0.34", features = ["svg"] }
winit = { version = "0.30", default-features = false }
image = { version = "0.25", features = ["png"] }
parking_lot = "0.12"
raw-window-handle = "0.6"
wry = "0.55.1"
webview2-com = "0.38.2"

[build-dependencies]
embed-resource = "3.0"

[profile.release]
opt-level = "z"
lto = "thin"
strip = true
codegen-units = 1
